@@ -1,11 +1,21 @@
 plugins {
     id 'application'
+    id 'jacoco'
     id 'org.openjfx.javafxplugin' version '0.0.11'
     id "com.diffplug.spotless" version "6.3.0"
 }
 
+var heapSize = ['-Xmx4g', '-Xms1g']
+
 application {
-    applicationDefaultJvmArgs = ['-Xmx4000m', '--add-opens', 'javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED', '--add-opens', 'javafx.graphics/javafx.stage=ALL-UNNAMED', '--add-opens', 'javafx.graphics/com.sun.javafx.tk.quantum=ALL-UNNAMED', '--add-opens', 'javafx.graphics/com.sun.glass.ui=ALL-UNNAMED']
+    applicationDefaultJvmArgs = ['-javaagent:lib/jars/measurer-0.1.1.jar',
+                                 '--add-opens', 'java.base/java.lang=ALL-UNNAMED',
+                                 '--add-opens', 'java.base/java.util=ALL-UNNAMED',
+                                 '--add-opens', 'javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED',
+                                 '--add-opens', 'javafx.graphics/javafx.stage=ALL-UNNAMED',
+                                 '--add-opens', 'javafx.graphics/com.sun.javafx.tk.quantum=ALL-UNNAMED',
+                                 '--add-opens', 'javafx.graphics/com.sun.glass.ui=ALL-UNNAMED']
+    applicationDefaultJvmArgs += heapSize
 }
 
 repositories {
@@ -39,6 +49,9 @@ dependencies {
     // Polygon Triangulation
     implementation 'io.github.earcut4j:earcut4j:2.2.2'
 
+    // Memory Measurer
+    implementation files('lib/jars/measurer-0.1.1.jar')
+
     // JavaFX
     implementation 'org.openjfx:javafx-base:0.0.11:win'
     implementation 'org.openjfx:javafx-base:0.0.11:mac'
@@ -64,8 +77,27 @@ application {
     mainClass = 'application.Main'
 }
 
+tasks.withType(AbstractCompile) {
+    options.compilerArgs += ["--enable-preview", "--add-modules", "jdk.incubator.vector"]
+}
+
+tasks.withType(Test) {
+    jvmArgs += ["--enable-preview", "--add-modules", "jdk.incubator.vector"]
+}
+
+tasks.withType(JavaExec) {
+    jvmArgs += ["--enable-preview", "--add-modules", "jdk.incubator.vector"]
+    jvmArgs += heapSize
+}
+
 tasks.named('test') {
     useJUnitPlatform()
+    finalizedBy jacocoTestReport // report is always generated after tests run
+}
+
+
+jacocoTestReport {
+    dependsOn test // tests are required to run before generating the report
 }
 
 spotless {
